test/visibility/only/errorWhenBehindPrivateUse.good
errorWhenBehindPrivateUse.chpl:8: error: Bad identifier in 'only' clause, no known 'x' defined in 'B'
